--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,8 +9,22 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  padding: 0;
+  margin: 0;
+  display:inline-block;
+  line-height:0;
+
 }
 
 * {
   box-sizing: border-box;
 }
+
+.container {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
